--- a/AppExemploXamarinQRCode.Android/AppExemploXamarinQRCode.Android.csproj
+++ b/AppExemploXamarinQRCode.Android/AppExemploXamarinQRCode.Android.csproj
@@ -56,6 +56,9 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="4.7.0.1239" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
+    <PackageReference Include="Xamarin.Forms.Visual.Material">
+      <Version>4.7.0.1239</Version>
+    </PackageReference>
     <PackageReference Include="ZXing.Net.Mobile">
       <Version>2.4.1</Version>
     </PackageReference>
